[gd_scene load_steps=8 format=3 uid="uid://dw7n0cn7ekrb1"]

[ext_resource type="Script" path="res://scripts/analog_input_viewer.gd" id="1_ihuqa"]
[ext_resource type="PackedScene" uid="uid://bbyrp2n1shvyx" path="res://spell_point.tscn" id="2_xgq5y"]

[sub_resource type="SphereMesh" id="SphereMesh_v268m"]
lightmap_size_hint = Vector2i(17, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_hm38y"]
radius = 0.0732185

[sub_resource type="CircleShape2D" id="CircleShape2D_ifimd"]
radius = 0.509476

[sub_resource type="Curve" id="Curve_h0q1g"]
_data = [Vector2(0, 0.110444), 0.0, 0.0, 0, 0, Vector2(0.218845, 0.789316), 0.0, 0.0, 0, 0, Vector2(0.419453, 0.204082), 0.0, 0.0, 0, 0, Vector2(0.604863, 0.742497), 0.0, 0.0, 0, 0, Vector2(0.81459, 0.0870348), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 6

[sub_resource type="Gradient" id="Gradient_7hn2f"]
offsets = PackedFloat32Array(0.0207612, 0.17301, 0.813149, 1)
colors = PackedColorArray(1, 0.478431, 0, 1, 1, 0.0334275, 0, 0.996352, 1, 0, 0, 0.996078, 0.352941, 0.0431373, 0.678431, 0.423529)

[node name="AnalogInputViewer" type="Node2D"]
scale = Vector2(1.6, 1.6)
script = ExtResource("1_ihuqa")
metadata/_edit_group_ = true

[node name="back" type="MeshInstance2D" parent="."]
visible = false
modulate = Color(0, 0.105882, 0.172549, 0.0784314)
position = Vector2(1.90735e-06, 0)
scale = Vector2(109.262, 109.163)
mesh = SubResource("SphereMesh_v268m")

[node name="Area2D" type="Area2D" parent="back"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="back/Area2D"]
shape = SubResource("CircleShape2D_hm38y")

[node name="AnalogPosition" type="MeshInstance2D" parent="."]
visible = false
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 0, 1, 1)
position = Vector2(2.38419e-07, 0.00171113)
scale = Vector2(10.008, 10)
mesh = SubResource("SphereMesh_v268m")

[node name="Area2D" type="Area2D" parent="AnalogPosition" groups=["analog_position"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnalogPosition/Area2D"]
shape = SubResource("CircleShape2D_ifimd")

[node name="SpellPoint0" parent="." instance=ExtResource("2_xgq5y")]
modulate = Color(1, 1, 1, 0.270588)
position = Vector2(2.08616e-07, 0)
default_scale = 0.6

[node name="SpellPoint1" parent="." instance=ExtResource("2_xgq5y")]
modulate = Color(1, 1, 1, 0.270588)
position = Vector2(-1.57952e-06, -55)
key_value = 1
default_scale = 0.6

[node name="SpellPoint2" parent="." instance=ExtResource("2_xgq5y")]
modulate = Color(1, 1, 1, 0.270588)
position = Vector2(55, 2.20537e-06)
key_value = 2
default_scale = 0.6

[node name="SpellPoint3" parent="." instance=ExtResource("2_xgq5y")]
modulate = Color(1, 1, 1, 0.270588)
position = Vector2(0, 55)
key_value = 3
default_scale = 0.6

[node name="SpellPoint4" parent="." instance=ExtResource("2_xgq5y")]
modulate = Color(1, 1, 1, 0.270588)
position = Vector2(-55, -1.07289e-06)
key_value = 4
default_scale = 0.6

[node name="Line" type="Line2D" parent="."]
width = 5.0
width_curve = SubResource("Curve_h0q1g")
default_color = Color(0, 0, 0, 1)
gradient = SubResource("Gradient_7hn2f")

[connection signal="area_entered" from="back/Area2D" to="." method="_center_entered"]
[connection signal="area_exited" from="back/Area2D" to="." method="_center_exited"]
[connection signal="area_entered" from="AnalogPosition/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="AnalogPosition/Area2D" to="." method="_on_area_2d_area_exited"]
